# gemma4-mlx-interp

./: .gitignore  CLAUDE.md  PHILOSOPHY_AND_DIRECTION.md  SPECULATIVE_DIRECTIONS.md  benchmark.py  forward.py  manifest  pyproject.toml  ur2vkfosoecfcjfamvkttc0cbrd7nu7a
.beads/: metadata.json
.claude/: settings.json
experiments/: causal_tracing.py  export_step_33_for_ui.py  fact_vector_geometry.py  logit_lens.py  logit_lens_batch.py  per_head_attention.py  position_logit_lens.py  side_channel_ablation.py  step_01_logit_lens_batch.py  step_02_layer_ablation.py  step_02_layer_ablation_e2b.py  step_02_layer_ablation_gemma3_4b.py  step_03_side_channel_ablation.py  step_04_sublayer_ablation.py  step_04_sublayer_ablation_e2b.py  step_05_attention_patterns.py  step_06_per_head_attention.py  step_07_single_head_ablation.py  step_08_position_logit_lens.py  step_09_causal_tracing.py  step_10_fact_vector_geometry.py  step_11_centroid_and_arithmetic.py  step_12_big_sweep.py  step_13_stress_tests.py  step_15_operation_disambiguation.py  step_16_representation_injection.py  step_17_capital_homonym.py  step_18_cohesion_analysis.py  step_22_emotion_probe_logit_lens.py  step_23_emotion_probe_implicit.py  step_24_emotion_probe_intensity.py  step_26_head_weight_analysis.py  step_27_ov_trajectories.py  step_32_direct_logit_attribution.py  step_33_dla_factual_sweep_e2b.py  step_34_layer_ablation_gemma3_4b.py  step_35_layer_ablation_e2b.py  step_36_sublayer_ablation_e2b.py  step_37_dla_factual_sweep_e2b.py  step_38_dla_factual_sweep_gemma3_4b.py
gemma4_mlx_interp/: README.md  __init__.py  (+17 more)
(+40 files in other folders)
