[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechbench-experiments"
version = "0.1.0"
description = "Mechanistic interpretability experiments against Gemma-family MLX models. Part of the mechbench repo family."
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "mlx>=0.31",
    "mlx-lm>=0.31",
    "mlx-vlm>=0.4",
    "numpy>=2.0",
    "matplotlib>=3.10",
    "scikit-learn>=1.7",
]

[tool.setuptools.packages.find]
include = ["gemma4_mlx_interp*"]
